# pong-bot

./: .envrc  .gitignore  README.md  flake.nix  project.json  pyproject.toml
data/1_elastics/: rl_shots.jsonl  shots.jsonl
data/5_elastics/: cv_shots.jsonl  rl_shots.jsonl  shots.jsonl  synthetic_outer.jsonl
motor_control/: __init__.py  __main__.py  cli.py  grbl.py  robot.py
report/cv/: cv_report.tex
report/rl/: rl_report.tex
rl/: __init__.py  episode.py  eval.py  gen_synthetic.py  plots.py  policy.py  shoot.py  stream.py  test_vlm.py  train.py  tune.py  tune_outer.py  vlm.py
utils/: data_dir.py
vision/: collect_shots.py  detector.py  plots.py  roboflow_sync.py  shoot.py  train_detector.py  train_head.py  transforms.py
vision/models/: __init__.py  base.py  pong_model.py
