[project]
name = "pong-bot"
version = "0.3.0"
description = "Pong-Bot — motor control, computer vision, and RL pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "click>=8.0",
]

[project.optional-dependencies]
# Install on Pi if using picamera2 for image capture
camera = [
    "picamera2",
]
# Install on training server (GPU machine)
training = [
    "torch>=2.0",
    "torchvision>=0.15",
    "pillow>=10.0",
    "transformers>=4.45",
    "accelerate>=1.0",
    "av>=12.0",
]

[project.scripts]
pong-motor              = "motor_control.cli:cli"
pong-shoot              = "rl.shoot:cli"
pong-tune               = "rl.tune:cli"
pong-tune-outer         = "rl.tune_outer:cli"
pong-train-rl           = "rl.train:cli"
pong-eval               = "rl.eval:cli"
pong-plot-rl            = "rl.plots:cli"
pong-gen-synthetic      = "rl.gen_synthetic:cli"
pong-vlm-test           = "rl.test_vlm:cli"
pong-cv-shoot           = "vision.shoot:cli"
pong-collect-cv         = "vision.collect_shots:cli"
pong-train-detector     = "vision.train_detector:cli"
pong-train-head         = "vision.train_head:cli"
pong-plot-cv            = "vision.plots:cli"
pong-roboflow           = "vision.roboflow_sync:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["motor_control", "rl", "vision", "utils"]
